# Visualization-of-the-movement-of-the-mechanism

./: CMakeLists.txt  brush.cpp  brush.h  display.cpp  main.cpp  math_of_mech.cpp  math_of_mech.h
